--- a/MVCTestCompany/Views/Employee/NewEmployeeForm.cshtml
+++ b/MVCTestCompany/Views/Employee/NewEmployeeForm.cshtml
@@ -8,6 +8,7 @@
     <p>First name: <input type="text" name="FirstName" id="FirstName" /></p>
     <p>Last name: <input type="text" name="LastName" id="LastName" /></p>
     <p>Title: <input type="text" name="Title" id="Title" /></p>
+    <p>Dept#: <input type="number" min="1" max="10" name="DeptNumnber" id="DeptNumber" </p>
     <p>Salary type (s=salary, h=hourly, p=piecerate): <input type="text" name="Type" id="Type" /></p>
     <p>
         Is the employee currently active? (choose an option)<select name="IsActive" id="IsActive">
